--- a/K8s/secret.yml
+++ b/K8s/secret.yml
@@ -4,5 +4,5 @@ metadata:
   name: dbsecret
 type: Opaque
 data:
-  db_username: cm9vdA==
-  db_password: ZXhhbXBsZQ==
+  db_username: <placeholder>
+  db_password: <>
